--- a/src/lang/en/STATS_SOUND_en.properties
+++ b/src/lang/en/STATS_SOUND_en.properties
@@ -8,11 +8,13 @@
 # * US Government Users Restricted Rights - Use, duplication or disclosure
 # * restricted by GSA ADP Schedule Contract with IBM Corp. 
 # ************************************************************************/
- 
 #Language properties for STATS SOUND 
 # NLS_MESSAGEFORMAT_NONE
 # NLS_ENCODING=UNICODE
 # IBMNJDK1
-
+#
+#Tue Jun 16 02:12:50 PDT 2020
+#
+#Tue Jun 16 18:18:48 PDT 2020
 Description=This command, which is only available for Microsoft Windows, plays the specified sound or sound file.  It can be useful when a long running job needs an audible notification at a selected point.  The specific sound definitions are defined in the Windows Control Panel
 Summary=Play Selected Sound
